mule-fundamentals/v/3.4/mule-exception-strategies.adoc
= Mule Exception Strategies

image:errors.png[errors] Mule provides numerous options for handling errors. Errors, or faults, that occur within Mule are referred to as *exceptions*; when an activity in your Mule instance fails, Mule throws an exception. To manage these exceptions, Mule allows you to configure *exception strategies*.

Mule’s default exception strategy — which implicitly applies to all Mule applications — manages errors (i.e. thrown exceptions) in Mule flows. When your flows require more sophisticated error management, you can implement one or more exception strategies to construct precise, efficient protocols for handling errors.

From a high level perspective, errors that occur in Mule fall into one of two categories: *System Exceptions*, and *Messaging Exceptions*.


== System Exceptions

Mule invokes a *System Exception Strategy* when an exception is thrown at the _system-level_ (i.e., when no message is involved, exceptions are handled by system exception strategies). For example, system exception strategies handle exceptions that occur:

* during application start-up
* when a connection to an external system fails

When a system exception strategy occurs, Mule sends an exception notification to registered listeners, logs the exception, and — if the exception was caused by a connection failure — executes the link:/mule-user-guide/v/3.4/configuring-reconnection-strategies[reconnection strategy]. System Exception Strategies are not configurable in Mule.

As an example, imagine Mule establishes a connection to a JMS broker in order to receive a message. When Mule attempts to use the connection to consume a message the connection fails, which causes Mule to invoke the system exception strategy. Because the failure occurred before any message was received for processing, Mule invoked the _system_, rather than _messaging_, exception strategy.

== Messaging Exceptions

Mule invokes a *Messaging Exception Strategy* whenever an exception is thrown within a flow. Whenever a message is involved, exceptions are handled by _messaging_ exception strategies.

When a message being processed through a Mule flow throws an exception, normal flow execution stops. Mule transfers the message to the message processor sequence within the exception strategy. You can incorporate any number of message processors into an exception strategy to handle the exception precisely as you wish. The diagram below illustrates what happens when a message throws an exception.

image:flow_exception.png[flow_exception]

Mule supports five types of messaging exception strategies, each of which is capable of handling errors that occur in flows which process transactions:

[%header,cols="34,33,33"]
|===
|Exception Strategy |Use |Transaction Error Handling
|*Default exception strategy* |Implicitly applied by default to handle all messaging exceptions that are thrown in Mule applications |When an exception is thrown in a flow, Mule automatically rolls back any pending transaction and logs the exception; if no transaction is involved, the default exception strategy simply logs the exception.
|*Catch exception strategy* |Define a catch exception strategy to customize the way Mule handles any exception. Catch exception strategies consume inbound messages, as opposed to rolling them back. |When a message throws an exception, the catch exception strategy _always_ commits the transaction and consumes the message.
|*Rollback exception strategy* |Define a rollback exception strategy to ensure that a message that throws an exception in a flow is rolled back for reprocessing (if the message source supports redelivery). Rollback exception strategies do not consume inbound messages. |When a message throws an exception, the rollback exception strategy makes one or more attempts to rollback the message and redeliver it for processing (if the message source supports redelivery). If the message exceeds its redelivery attempts, then the rollback exception strategy commits the failed transaction and consumes the message.
|*Reference exception strategy* |Define a reference exception strategy to refer and adhere to the error handling parameters defined in a global catch, rollback or choice exception strategy. |When a message throws an exception, the reference exception strategy refers and adheres to the error handling parameters defined in a global catch, rollback or choice exception strategy. (The reference exception strategy itself never actually performs any rollback, commit, or consume activities.)
|*Choice exception strategy* |Define a choice exception strategy to customize the way Mule handles a message that throws an exception based on the message’s content at the moment it throws the exception. |When a message throws an exception, the choice exception strategy makes a decision about where to route the message for further processing. (The choice exception strategy itself never actually performs any rollback, commit, or consume activities.)
|===

==== Characteristics of Messaging Exception Strategies

* Each flow can contain only one exception strategy.
* Each exception strategy can contain any number of message processors.
* Choice exception strategies can contain one or more catch and/or rollback exception strategies. (Rollback and catch exception strategies cannot, however, contain other exception strategies.)
* You can create one or more *global exception strategies* to reuse in flows throughout your entire Mule application. 

== Examples

[source, xml, linenums]
----
<mule xmlns:spring="http://www.springframework.org/schema/beans"
    xmlns="http://www.mulesoft.org/schema/mule/core" xmlns:doc="http://www.mulesoft.org/schema/mule/documentation"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://www.mulesoft.org/schema/mule/http http://www.mulesoft.org/schema/mule/http/current/mule-http.xsd">
...
    <flow name="loan-broker-sync" doc:name="loan-broker-sync"
        doc:description="">
 <http:inbound-endpoint address="http://0.0.0.0:11081"
            exchange-pattern="request-response" doc:name="HTTP" />
 <http:body-to-parameter-map-transformer
            doc:name="Body to Parameter Map" />
        <choice doc:name="Choice">
            <when
                expression="!(payload['name'] == null || payload['ssn'] == null || payload['amount'] == null || payload['term']==null)">
                <expression-component doc:name="create customer request">
                    import org.mule.example.loanbroker.message.CustomerQuoteRequest;
                    import org.mule.example.loanbroker.model.Customer;
 
                    payload = new CustomerQuoteRequest(new Customer(payload['name'],
                    Integer.parseInt(payload['ssn'])),
                    Integer.parseInt(payload['amount']),
                    Integer.parseInt(payload['term']));
                </expression-component>
 <enricher source="#[payload]" target="#[flowVars['creditProfile']]"
                    doc:name="Enrich with creditProfile">
                    <flow-ref name="lookupCustomerCreditProfile" doc:name="lookupCustomerCreditProfile" />
                </enricher>
 <enricher source="#[payload]" target="#[flowVars['banks']]"
                    doc:name="Enrich with banks">
                    <flow-ref name="lookupBanks" doc:name="lookupBanks" />
                </enricher>
 <set-variable variableName="quotes"
                    value="#[new java.util.LinkedList()]" doc:name="create empty quotes" />
                <foreach collection="#[flowVars['banks']]" doc:name="Foreach">
                    <enricher target="#[quotes.add($)]" doc:name="Message Enricher">
                        <flow-ref name="lookupLoanQuote" doc:name="lookupLoanQuote" />
                    </enricher>
                </foreach>
 <flow-ref name="findLowestLoanQuote" doc:name="findLowestLoanQuote" />
 <object-to-string-transformer doc:name="Object to String" />
            </when>
            <otherwise>
                <expression-component doc:name="set error message">payload="Error:
                    incomplete request"</expression-component>
            </otherwise>
        </choice>
 
        <catch-exception-strategy doc:name="Catch Exception Strategy">
            <set-payload value="Error processing loan request"
                doc:name="Set error message" />
        </catch-exception-strategy>
 
    </flow>
...
</mule>
----

== See Also

* *NEXT STEP*: Read on about the structure of a link:/mule-fundamentals/v/3.4/mule-message-structure[Mule message].
* See the link:/mule-user-guide/v/3.4/foreach-processing-and-choice-routing-example[full example application].
* Learn more about configuring the link:/mule-user-guide/v/3.4/catch-exception-strategy[catch], link:/mule-user-guide/v/3.4/rollback-exception-strategy[rollback], link:/mule-user-guide/v/3.4/reference-exception-strategy[reference] and link:/mule-user-guide/v/3.4/choice-exception-strategy[choice] exception strategies.
