mule-fundamentals/v/3.8/mule-exception-strategies.adoc
= Mule Exception Strategies
:keywords: studio, exceptions, exception handlers, catch exceptions

[cols="20a,80a"]
|===
|image:errors.png[errors]
|Mule provides numerous options for handling errors. Errors, or faults, that occur within Mule are referred to as *exceptions*; when an activity in your Mule instance fails, Mule throws an exception. To manage these exceptions, Mule allows you to configure *exception strategies*.

Mule’s default exception strategy — which implicitly applies to all Mule applications — manages errors (such as, thrown exceptions) in Mule flows. When your flows require more sophisticated error management, you can implement one or more exception strategies to construct precise, efficient protocols for handling errors.
|===

From a high level perspective, errors that occur in Mule fall into one of two categories: *System Exceptions*, and *Messaging Exceptions*.


== System Exceptions

Mule invokes a *System Exception Strategy* when an exception is thrown at the _system-level_ (that is, when no message is involved, exceptions are handled by system exception strategies). For example, system exception strategies handle exceptions that occur:

* During application start-up
* When a connection to an external system fails

When a system exception occurs, Mule sends an exception notification to registered listeners, logs the exception, and — if the exception was caused by a connection failure — executes the link:/mule-user-guide/v/3.8/configuring-reconnection-strategies[reconnection strategy]. System Exception Strategies are not configurable in Mule.

As an example, imagine Mule establishes a connection to a JMS broker in order to receive a message. When Mule attempts to use the connection to consume a message the connection fails, which causes Mule to invoke the system exception strategy. Because the failure occurred before any message was received for processing, Mule invoked the _system_, rather than _messaging_, exception strategy.

== Messaging Exceptions

Mule invokes a *Messaging Exception Strategy* whenever an exception is thrown within a flow. Whenever a message is involved, exceptions are handled by _messaging_ exception strategies.

When a message being processed through a Mule flow throws an exception, normal flow execution stops. Mule transfers the message to the message processor sequence within the exception strategy. You can incorporate any number of message processors into an exception strategy to handle the exception precisely as you wish. The diagram below illustrates what happens when a message throws an exception.

image:flow_exception.png[flow_exception]

Mule supports five types of messaging exception strategies, each of which is capable of handling errors that occur in flows which process transactions:

[cols="10a,45a,45a",options="header"]
|===
|Exception Strategy |Use |Transaction Error Handling
|*Catch Exception Strategy* |Customizes the way Mule handles any exception. Catch exception strategies consume inbound messages, as opposed to rolling them back. |When a message throws an exception, the catch exception strategy _always_ commits the transaction and consumes the message.
|*Choice Exception Strategy* |Customizes the way Mule handles a message that throws an exception based on the message’s content at the moment it throws the exception. |When a message throws an exception, the choice exception strategy makes a decision about where to route the message for further processing. (The choice exception strategy itself never actually performs any rollback, commit, or consume activities.)
|*Default Exception Strategy* |Provides an implicit default to handle all messaging exceptions that are thrown in Mule applications |When an exception is thrown in a flow, Mule automatically rolls back any pending transaction and logs the exception; if no transaction is involved, the default exception strategy simply logs the exception.
|*Reference Exception Strategy* |Refers and adheres to the error handling parameters defined in a global catch, rollback, or choice exception strategy. |When a message throws an exception, the reference exception strategy refers and adheres to the error handling parameters defined in a global catch, rollback, or choice exception strategy. (The reference exception strategy itself never actually performs any rollback, commit, or consume activities.)
|*Rollback Exception Strategy* |Ensures that a message that throws an exception in a flow is rolled back for reprocessing (if the message source supports redelivery). Rollback exception strategies do not consume inbound messages. |When a message throws an exception, the rollback exception strategy makes one or more attempts to rollback the message and redeliver it for processing (if the message source supports redelivery). If the message exceeds its redelivery attempts, then the rollback exception strategy commits the failed transaction and consumes the message.
|===

==== Characteristics of Messaging Exception Strategies

* Each flow can contain only one exception strategy.
* Each exception strategy can contain any number of message processors.
* Choice exception strategies can contain one or more catch and/or rollback exception strategies. (Rollback and catch exception strategies cannot, however, contain other exception strategies.)
* You can create one or more *global exception strategies* to reuse in flows throughout your entire Mule application.
* A link:/mule-user-guide/v/3.8/transaction-management[Transactional Scope] may include its own exception strategy, regardless of what you define at Flow level.

== Examples

image:mule-exception-strategies.png[mule-exception-strategies]

[source, xml, linenums]
----
include::_sources/mule-exception-strategies.xml[]
----


== See Also

* *NEXT STEP*: Read on about the structure of a link:/mule-fundamentals/v/3.8/mule-message-structure[Mule message].
* See the link:/mule-fundamentals/v/3.8/anypoint-exchange[examples].
* Learn more about configuring the link:/mule-user-guide/v/3.8/catch-exception-strategy[catch], link:/mule-user-guide/v/3.8/rollback-exception-strategy[rollback], link:/mule-user-guide/v/3.8/reference-exception-strategy[reference], and link:/mule-user-guide/v/3.8/choice-exception-strategy[choice] exception strategies.
* link:http://training.mulesoft.com[MuleSoft Training]
* link:https://www.mulesoft.com/webinars[MuleSoft Webinars]
* link:http://blogs.mulesoft.com[MuleSoft Blogs]
* link:http://forums.mulesoft.com[MuleSoft Forums]
* link:https://www.mulesoft.com/support-and-services/mule-esb-support-license-subscription[MuleSoft Support]
* mailto:support@mulesoft.com[Contact MuleSoft]
